2007-12-29  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/boehm-gc/gc2.c (KaffeGC_MarkAddress),
	kaffe/kaffevm/boehm-gc/gc2.h (gcMark): Replace GC_PTR by void * to fix
	building with Boehm GC 7.0.

2007-12-25  Dalibor Topic  <robilad@kaffe.org>

	Fix for #120.
	
	* test/regression/Makefile.am (XFAIL_TESTS): Removed DateFormatTest.java again,
	as it was my operating system installation that didn't have a time zone set that
	caused the test to fail. Yay me.

	Reported by:  Ito Kazumitsu  <kaz@maczuka.gcd.org>

2007-12-24  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* kaffe/man/kaffe.1.in: Updated according to kaffe.1.xml.

2007-12-24  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* test/regression/DateFormatTest.java: Corrected a comment.

2007-12-24  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/systems/unix-jthreads/jthread.c (start_this_sucker_on_a_new_frame): 
	Removed NONRETURNING to fix compiler warning.

2007-12-23  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/jit/machine.c (finishInsnSequence): 
	Removed superflous cast of jch->code_start to char *,
	cast jch->pool to nativecode * instead of char * to fix
	compiler warning.
	(installMethodCode): Changed cast of code->code to 
	nativecode * to match meth->c.ncode.ncode_end and fix a
	compiler warning.

	* kaffe/kaffevm/jit/codeproto.h,
	kaffe/kaffevm/jit/icode.c (softcall_lookupinterfacemethod): 
	Added const to method parameter for fix compiler warning.

2007-12-22  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Changed gjdoc integration task to reflect status.

	* WHATSNEW: Added gjdoc information.

2007-12-22  Dalibor Topic  <robilad@kaffe.org>

	* m4/ac_prog_javadoc.m4: New file from ac-archive.sf.net. Adapted to check
	for gjdoc, too, and to print a warning if no javadoc tool can be found. Use
	AC_PATH_PROGS instead of AC_CHECK_PROGS so that kaffe's javadoc can be symlinked
	to it.

	* configure.ac: If --enable-gjdoc is not passed to configure, use AC_PROG_JAVADOC
	to find a suitable tool.
