@@ -1,3 +1,7 @@
+2007-12-30  Dalibor Topic  <robilad@kaffe.org>
+
+	* configure.ac: Downgrade error when not building with gcc to warning.
+
 2007-12-29  Dalibor Topic  <robilad@kaffe.org>
 
 	* kaffe/kaffevm/boehm-gc/gc2.c (KaffeGC_MarkAddress),
